updates for route params and exposing schemas
